cmake_minimum_required(VERSION 2.6)
project(common_debug)
IF (DEFINED ENV{CHAOS_BUNDLE} )
  include($ENV{CHAOS_BUNDLE}/tools/project_template/CMakeChaos.txt)
ELSE()
  MESSAGE(STATUS "STANDALONE, environment CHAOS_BUNDLE defined")
  IF (NOT CMAKE_INSTALL_PREFIX) 
    MESSAGE(fatal "you must add -DCMAKE_INSTALL_PREFIX=<dir>")
  ELSE()
    MESSAGE(STATUS "install prefix ${CMAKE_INSTALL_PREFIX}")
  ENDIF()
  INCLUDE_DIRECTORIES(. ../..)
  LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/build ${CMAKE_INSTALL_PREFIX}/lib)
ENDIF()



SET(debug_src core/debug.cpp )
SET(debug_test_src test/main.cpp )

IF(FrameworkLib)
SET(libs chaos_common ${FrameworkLib})
ELSE()
SET(libs pthread)
ENDIF()
IF(BUILD_FORCE_STATIC)
ADD_LIBRARY(${PROJECT_NAME} STATIC ${debug_src})
ADD_EXECUTABLE(test_debug ${debug_test_src} ${debug_src})
TARGET_LINK_LIBRARIES(test_debug ${libs})
ELSE()
ADD_LIBRARY(${PROJECT_NAME} SHARED ${debug_src})
ADD_EXECUTABLE(test_debug ${debug_test_src})
TARGET_LINK_LIBRARIES(test_debug ${PROJECT_NAME} ${libs})
ENDIF()

FILE(GLOB headers "core/*.h")
INSTALL(FILES ${headers} DESTINATION include/common/core/debug)
INSTALL_TARGETS(/lib  ${PROJECT_NAME})
INSTALL_TARGETS(/bin test_debug)
