cmake_minimum_required(VERSION 2.8)
project(common_debug)

SET(debug_src core/debug.cpp )
SET(debug_test_src test/main.cpp )
ADD_DEFINITIONS(-fPIC)
IF(FrameworkLib)
SET(libs chaos_common ${FrameworkLib})
ELSE()
SET(libs pthread dl)
ENDIF()
INCLUDE_DIRECTORIES(../..)
ADD_LIBRARY(${PROJECT_NAME} STATIC ${debug_src})
ADD_EXECUTABLE(test_debug ${debug_test_src})
TARGET_LINK_LIBRARIES(test_debug ${PROJECT_NAME} ${libs})

FILE(GLOB headers "core/*.h")
INSTALL(FILES ${headers} DESTINATION include/common/debug/core)
INSTALL_TARGETS(/lib  ${PROJECT_NAME})
INSTALL_TARGETS(/bin/debug test_debug)
